@@ -107,9 +107,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m --illegal-access=permit</argLine>
 				</configuration>
 			</plugin>
 
@@ -122,6 +122,7 @@
 					</argLine>
 				</configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
 
